WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51331
[Qt] REGRESSION (
r73535
): tst_QWebPage fails
https://bugs.webkit.org/show_bug.cgi?id=51331
Summary
[Qt] REGRESSION (r73535): tst_QWebPage fails
Csaba Osztrogonác
Reported
2010-12-20 07:23:41 PST
Created
attachment 76997
[details]
GDB backtrace in debug mode QFATAL : tst_QWebPage::contextMenuCrash() Received signal 11 FAIL! : tst_QWebPage::contextMenuCrash() Received a fatal error. (GDB backtrace attached)
Attachments
GDB backtrace in debug mode
(2.93 KB, text/plain)
2010-12-20 07:23 PST
,
Csaba Osztrogonác
no flags
Details
Patch
(2.83 KB, patch)
2011-01-22 08:57 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(3.75 KB, patch)
2011-02-08 12:42 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2011-01-22 08:57:30 PST
Created
attachment 79847
[details]
Patch
Csaba Osztrogonác
Comment 2
2011-02-03 06:29:38 PST
Comment on
attachment 79847
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=79847&action=review
> Source/WebKit/qt/tests/qwebpage/tst_qwebpage.cpp:512 > - QVERIFY(contextMenu); > + QVERIFY(!contextMenu); > delete contextMenu;
Deleting a null pointer is incorrect. Otherwise it worked for me locally.
Robert Hogan
Comment 3
2011-02-03 12:51:28 PST
(In reply to
comment #2
)
> (From update of
attachment 79847
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=79847&action=review
> > > Source/WebKit/qt/tests/qwebpage/tst_qwebpage.cpp:512 > > - QVERIFY(contextMenu); > > + QVERIFY(!contextMenu); > > delete contextMenu; > > Deleting a null pointer is incorrect. Otherwise it worked for me locally.
Good point, though see
https://bugs.webkit.org/show_bug.cgi?id=20357
The test is ensuring that contextMenu is a protected pointer. So attempting to delete it still tests that, I think. Could be confused though.
Robert Hogan
Comment 4
2011-02-08 12:42:15 PST
Created
attachment 81676
[details]
Patch
WebKit Commit Bot
Comment 5
2011-02-09 14:16:58 PST
Comment on
attachment 81676
[details]
Patch Clearing flags on attachment: 81676 Committed
r78135
: <
http://trac.webkit.org/changeset/78135
>
WebKit Commit Bot
Comment 6
2011-02-09 14:17:03 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 7
2011-02-09 14:37:14 PST
r78135
fixed a bug and show us a previously hidden fail: QFATAL : tst_QWebPage::inputMethodsTextFormat(Qt by) Received signal 15 FAIL! : tst_QWebPage::inputMethodsTextFormat(Qt by) Received a fatal error. Robert, could you file a new bug report on it, please?
Robert Hogan
Comment 8
2011-02-10 10:59:08 PST
(In reply to
comment #7
)
>
r78135
fixed a bug and show us a previously hidden fail: > QFATAL : tst_QWebPage::inputMethodsTextFormat(Qt by) Received signal 15 > FAIL! : tst_QWebPage::inputMethodsTextFormat(Qt by) Received a fatal error. > > Robert, could you file a new bug report on it, please?
That didn't crash for me on Qt 6.X here.
Csaba Osztrogonác
Comment 9
2011-02-11 05:53:49 PST
(In reply to
comment #8
)
> (In reply to
comment #7
) > >
r78135
fixed a bug and show us a previously hidden fail: > > QFATAL : tst_QWebPage::inputMethodsTextFormat(Qt by) Received signal 15 > > FAIL! : tst_QWebPage::inputMethodsTextFormat(Qt by) Received a fatal error. > > > > Robert, could you file a new bug report on it, please? > > That didn't crash for me on Qt 6.X here.
I did it yesterday by myself:
https://bugs.webkit.org/show_bug.cgi?id=54217
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug